public/lite/api/en/r1.7/_sources/generate/file_include_core_ops_space_to_depth.h.rst.txt
:gitee_url: https://gitee.com/mindspore/docs


.. _file_include_core_ops_space_to_depth.h:

File space_to_depth.h
=====================

|exhale_lsh| :ref:`Parent directory <dir_include_core_ops>` (``include/core/ops``)

.. |exhale_lsh| unicode:: U+021B0 .. UPWARDS ARROW WITH TIP LEFTWARDS
Definition (``include/core/ops/space_to_depth.h``)
--------------------------------------------------


.. toctree::
   :maxdepth: 1

   program_listing_file_include_core_ops_space_to_depth.h.rst





Includes
--------


- ``memory``

- ``mindapi/base/format.h``

- ``mindapi/base/types.h``

- ``ops/base_operator.h`` (:ref:`file_include_core_ops_base_operator.h`)

- ``vector``






Namespaces
----------


- :ref:`namespace_mindspore`

- :ref:`namespace_mindspore__ops`


Classes
-------


- :ref:`exhale_class_classmindspore_ops_SpaceToDepth`


Functions
---------


- :ref:`exhale_function_mindspore_ops_SpaceToDepthInfer-1`


Variables
---------


- :ref:`exhale_variable_mindspore_ops_kNameSpaceToDepth-1`

